--- a/src/sass/pages/_pages.scss
+++ b/src/sass/pages/_pages.scss
@@ -7,6 +7,7 @@
     background-size: cover;
     background-position: center right;
     min-height: 75vh;
+    padding: 1.5rem 0;
 
     &::before {
         content: "";
